Angular Material Initial Commit

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "agile-times": {
+    "angularmaterial": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/agile-times",
+            "outputPath": "dist/angularmaterial",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "agile-times:build"
+            "browserTarget": "angularmaterial:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "agile-times:build:production"
+              "browserTarget": "angularmaterial:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "agile-times:build"
+            "browserTarget": "angularmaterial:build"
           }
         },
         "test": {
@@ -110,15 +110,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "agile-times:serve"
+            "devServerTarget": "angularmaterial:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "agile-times:serve:production"
+              "devServerTarget": "angularmaterial:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "agile-times"
+  "defaultProject": "angularmaterial"
 }
